--- a/CodeSnippets.ipynb
+++ b/CodeSnippets.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598466886090",
+   "name": "python_defaultSpec_1598491264120",
    "display_name": "Python 3.7.3 64-bit ('base': conda)"
   }
  },
@@ -44,6 +44,76 @@
     "            \n",
     "MyParser = MyHTMLParser()\n",
     "MyParser.feed(''.join([input().strip() for _ in range(int(input()))]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys #kvuli argumentum (argv)\n",
+    "import random #kvuli fci randint(pocatecni hodnota, koncova hodnota)\n",
+    "\n",
+    "if len(sys.argv) > 1: #pokud je argument value > 1\n",
+    "    arg = sys.argv[1]\n",
+    "else:\n",
+    "    arg = False\n",
+    "\n",
+    "def generate_bn():\n",
+    "    bd = input(\"Date of birdth [YYYY-MM-DD]: \")\n",
+    "    sex = input(\"Sex: \")\n",
+    "\n",
+    "    year = int(bd[0:4])\n",
+    "    part1 = bd.replace('-','')[2:]\n",
+    "    print(part1) #YYYYMMDD\n",
+    "    print(year) #vypise rok narozeni \n",
+    "\n",
+    "    while True:\n",
+    "        if year < 1954:\n",
+    "            part2 = random.randint(0,999)\n",
+    "            f_inc = 5000000\n",
+    "            if part2 < 10:\n",
+    "                part2 = ('00' + str(part2))\n",
+    "            elif part2 < 100 and part2>= 10:\n",
+    "                part2 = ('0' + str(part2))\n",
+    "\n",
+    "        else:\n",
+    "            part2 = random.randint(0,9999)\n",
+    "            f_inc = 50000000\n",
+    "            if part2 < 10:\n",
+    "                part2 = ('000' + str(part2))\n",
+    "            elif part2 < 100 and part2 >= 10:\n",
+    "                part2 = ('00' + str(part2))\n",
+    "            elif part2 < 1000 and part2 >= 100:\n",
+    "                part2 = ('0' + str(part2))\n",
+    "\n",
+    "        num = int(str(part1)+str(part2))\n",
+    "        if sex=='F':\n",
+    "            num += f_inc\n",
+    "\n",
+    "        if(num % 11 == 0):\n",
+    "            break\n",
+    "    print('Delka kontrolniho cisla je: ' + str(len(str(part2))))\n",
+    "    print(num)\n",
+    "\n",
+    "def is_valid_bn(num):\n",
+    "    valid = True\n",
+    "    if(num % 11 != 0):\n",
+    "        valid = False\n",
+    "\n",
+    "    if(len(num) != 9 and int(num[:2]) < 54):\n",
+    "        valid = False\n",
+    "\n",
+    "    if(len(num) != 10 and int(num[:2]) >= 54):\n",
+    "        valid = False\n",
+    "        \n",
+    "    print(valid)\n",
+    "\n",
+    "if arg:\n",
+    "   is_valid_bn(arg)\n",
+    "else:\n",
+    "   generate_bn()"
    ]
   }
  ]
